--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@redux-devtools/core": "^3.13.1",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.27",
